--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
   - type: web
-    name: taskmaster-backend
+    name: taskmaster
     env: python
-    buildCommand: "pip install -r backend/requirements.txt"
-    startCommand: "gunicorn app:app --bind 0.0.0.0:10000"
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "gunicorn app:app --bind 0.0.0.0:5000"
     plan: free
     runtime: python3
