--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,6 @@ services:
     name: taskmaster
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app --bind 0.0.0.0:5000"
+    startCommand: "gunicorn app:app"
     plan: free
     runtime: python3
