a terrible desgin is comming

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://taskmaster_db:2002%40Yad@cluster0.d1s6d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://taskmaster_db:2002Yad@cluster0.d1s6d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
